// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`QueryRuleCustomData should render with state 1`] = `
<ng-component
  testedWidget={[Function NgAisQueryRuleCustomData]}
>
  <ais-instantsearch>
    <ais-query-rule-custom-data>
      <div
        class="ais-QueryRuleCustomData"
      >
        
        
        <div>
          
          <div>
            <pre>
              {
    "banner": "lol yes it is a banner"
  }
            </pre>
          </div>
        </div>
      </div>
    </ais-query-rule-custom-data>
  </ais-instantsearch>
</ng-component>
`;

exports[`QueryRuleCustomData should render without state 1`] = `
<ng-component
  testedWidget={[Function NgAisQueryRuleCustomData]}
>
  <ais-instantsearch>
    <ais-query-rule-custom-data>
      <div
        class="ais-QueryRuleCustomData"
      >
        
        
        <div>
          
        </div>
      </div>
    </ais-query-rule-custom-data>
  </ais-instantsearch>
</ng-component>
`;
